# wikipedia-mobile

./: .env_examples  .gitignore  README.md  config.emulation.env  pyproject.toml
tests/: conftest.py  test_wikipedia_app.py
wikipedia_app/data/: __init__.py  search.py  user.py
wikipedia_app/models/: app.py
wikipedia_app/models/controls/: article.py
